--- a/scripts/example_script.Rmd
+++ b/scripts/example_script.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Example Analyses"
-author: "Jack Gisby"
+author: ""
 date: "`r Sys.Date()`"
 output:
   github_document:
@@ -11,183 +11,10 @@ output:
 ---
 
 ```{r setup, include = FALSE}
-library(ggpubr)
 
-library(nlme)
-library(lmerTest)
-
-library(caret)
-library(randomForestExplainer)
-
-library(survival)
-library(JMbayes)
-library(splines)
-
-library(OlinkAnalyzeModified)
-
-theme_set(theme_pubr())
-theme_update(text = element_text(size=11))
-
-set.seed(1)
 ```
 
-# Modified OlinkAnalyze Package
-
-To run the analyses we have generated a modified version of the OlinkAnalyze package.
-This includes functions for applying linear mixed models and joint models to all
-proteins in the dataset. 
-
-The package, also contained in this repository, must be installed in order to run this
-script. This also contains the code used to generate the models if of interest.
 
 ```{r custom_functions, eval=FALSE, include=TRUE}
-devtools::install_github(repo ='jackgisby/longitudinal_olink_proteomics/OlinkAnalyze_Modified')
-library(OlinkAnalyzeModified)
-```
 
-# The Dataset
-
-A public version of the dataset is provided for replication of results and further
-investigation. We have split subcohort A (plasma) and subcohort B (serum) into
-separate CSVs. The NPX (protein expression) level data contains a row for each data point whilst the
-sample level data contains phenotypic data and clinical measurements; the `serum_samples` 
-dataframe has less columns than the `plasma_samples` dataframe as it does not 
-contain contemporaneous sample data. 
-
-Note that for the models in the paper, we used the exact age and included more
-granular ethnicity groupings. However, we have only provided binned age and simplified
-ethnicity groupings in the public dataset. Therefore, exact results may differ
-slightly depending on the analysis.
-
-```{r load_data}
-# load protein expression data
-plasma_long <- read.csv("../data/plasma_npx_level.csv")
-serum_long <- read.csv("../data/serum_npx_level.csv")
-
-# load related pheno data
-plasma_samples <- read.csv("../data/plasma_sample_level.csv")
-serum_samples <- read.csv("../data/serum_sample_level.csv")
-
-# combine into single dataframe
-plasma_full <- dplyr::left_join(plasma_long, plasma_samples)
-serum_full <- dplyr::left_join(serum_long, serum_samples)
-```
-
-
-# COVID +ve vs -ve Differential Abundance
-
-The following code chunk generates linear mixed models that predict NPX levels for
-each protein from `Case_Control` status and covariates. The `Individual_ID` is used
-as a random term to account for repeated measurements. Volcano plots are generated
-and the proteins with the highest logp values and fold changes are labelled.
-
-```{r da, warning=FALSE}
-plasma_case_control <- simple_mixed_de(
-    plasma_full, 
-    labels=0.1, 
-    logp_label=6.8,             
-    variable="Case_Control",       
-    plot_xlab = "Log2 Fold Change (COVID Positive - Negative)", 
-    plot_title="Subcohort A (+ve vs -ve)",
-    random="Individual_ID",
-    covariates = c("Sex", "Age", "Ethnicity")
-)
-
-head(plasma_case_control)
-
-serum_case_control <- simple_mixed_de(
-    serum_full, 
-    labels=0.1, 
-    logp_label=7,
-    variable="Case_Control", 
-    plot_xlab = "Log2 Fold Change (COVID Positive - Negative)", 
-    plot_title="Subcohort B (+ve vs -ve)",
-    random="Individual_ID",
-    covariates = c("Sex", "Age", "Ethnicity"),
-)
-
-head(serum_case_control)
-```
-
-# Severity Differential Abundance
-
-The following code chunk generates linear mixed models that predict NPX levels for
-each protein using WHO severity at time of sampling encoded as an ordinal variable. 
-By default, polynomial contrasts (`?contr.poly`) are generated for ordered factors. 
-As with the `Case_Control` analysis, covariates are entered into
-the model and `Individual_ID` is used as a random term. 
-
-```{r severity, warning=FALSE}
-plasma_full$WHO_Severity_Contemporaneous <- ordered(plasma_full$WHO_Severity_Contemporaneous, c("NEGATIVE", "mild", "moderate", "severe", "critical"))
-
-plasma_severity <- simple_mixed_de(
-    plasma_full[plasma_full$Case_Control == "POSITIVE",], 
-    labels=0.1, 
-    logp_label = 8.5,
-    variable="WHO_Severity_Contemporaneous",
-    plot_xlab = "Linear Gradient", 
-    plot_title="Severity Analysis",
-    random="Individual_ID",
-    covariates = c("Sex", "Age", "Ethnicity")
-)
-```
-
-# Joint Models
-
-In our analysis, we generated joint models for each protein that combine 
-linear mixed models and Cox regression to predict risk of death using a 
-continuous covariate (NPX). The joint models are estimated using Markov chain
-Monte Carlo (MCMC) and so take some time to run; therefore, in this example we
-only generate a model for a single protein (AZU1).
-
-```{r JM, message=FALSE, warning=FALSE}
-summary(joint_model(plasma_full[plasma_full$Case_Control == "POSITIVE",], "AZU1"))
-```
-
-# Random Forests
-
-We used the first sample for each individual to predict peak WHO severity. 
-A random forests model is generated using caret (using 10-fold cross-validation repeated
-10 times). Variable importance measures are then calculated for each protein.
-
-```{r RF, warning=FALSE}
-plasma_independent <- get_first_samples(plasma_full[plasma_full$Case_Control == "POSITIVE",])
-
-plasma_independent$grouped_severity <- ifelse(
-    plasma_independent$WHO_Severity_Peak %in% c("mild", "moderate"), 
-    "mild_moderate", 
-    "severe_critical"
-)
-
-set.seed(1)
-plasma_rf <- run_rf(plasma_independent)
-var_imp <- measure_importance(plasma_rf$finalModel)
-
-head(var_imp)
-```
-
-# Longitudinal Models
-
-Finally, we generate linear mixed models for each protein to predict NPX from
-the interaction between peak WHO severity and time. Proteins with a significant
-(FDR < 0.05) interaction term were considered to have a differential temporal
-expression depending on the severity of the disease course peak. 
-
-```{r longt, message=FALSE, warning=FALSE}
-formula_string <- "NPX ~ bs(Time_From_First_Symptoms, degree = 2) * grouped_severity + Age + Sex + Ethnicity + (bs(Time_From_First_Symptoms, degree = 2) | Individual_ID)"
-
-plasma_full$grouped_severity <- ifelse(
-    plasma_full$WHO_Severity_Peak %in% c("mild", "moderate"), 
-    "mild_moderate", 
-    "severe_critical"
-)
-
-lmm_prot_time <- plasma_full %>% 
-    filter(Case_Control=="POSITIVE" & Time_From_First_Symptoms <= 21 & !is.na(Time_From_First_Symptoms)) %>%
-    group_by(Assay, GeneID, UniProt, Panel) %>%
-    group_modify(~tidy(anova(single_lmer(data=.x, formula_string = formula_string)))) %>%
-    ungroup() %>%
-    filter(term == "bs(Time_From_First_Symptoms, degree = 2):grouped_severity")
-
-head(lmm_prot_time)
 ```
